[tool.poetry]
name = "air_bot"
version = "0.1.0"
description = "Simple chat bot created to bridge information flow between the Air project and the Wh00t chat app"
authors = ["roboto84 <7658704+roboto84@users.noreply.github.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
