[tool.poetry]
name = 'air_bot'
version = '0.1.0'
description = 'Simple chat bot created to bridge information flow between the Air project and the Wh00t chat app'
authors = ['roboto84 <7658704+roboto84@users.noreply.github.com>']
license = 'GPL-3.0-or-later'

[tool.poetry.dependencies]
python = '^3.10'
python-dotenv = '^0.15.0'
pytz = '^2022.1'
air-core = {git = 'https://github.com/roboto84/air_core.git', rev = 'v0.1.0'}
wh00t-core = {git = 'https://github.com/roboto84/wh00t_core.git', tag = 'v0.5.2'}

[tool.poetry.dev-dependencies]
pytest = '^7.2.0'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
